exports[`ButtonNavigation component renders correctly 1`] = `
<section
  className="bg-neutral05">
  <div
    className="container">
    <nav
      className="button-nav">
      <a
        className="button-icon-primary"
        onClick={[Function]}
        style={Object {}}>
        <span>
          <i
            className="manicon manicon-books-on-shelf" />
          See more projects
        </span>
      </a>
      <a
        className="button-icon-primary"
        onClick={[Function]}
        style={Object {}}>
        <span>
          <i
            className="manicon manicon-books-with-glasses" />
          Projects You\'re Following
        </span>
      </a>
    </nav>
  </div>
</section>
`;

exports[`ButtonNavigation component respects the grayBg prop 1`] = `
<section
  className="">
  <div
    className="container">
    <nav
      className="button-nav">
      <a
        className="button-icon-primary"
        onClick={[Function]}
        style={Object {}}>
        <span>
          <i
            className="manicon manicon-books-on-shelf" />
          See more projects
        </span>
      </a>
      <a
        className="button-icon-primary"
        onClick={[Function]}
        style={Object {}}>
        <span>
          <i
            className="manicon manicon-books-with-glasses" />
          Projects You\'re Following
        </span>
      </a>
    </nav>
  </div>
</section>
`;

exports[`ButtonNavigation component respects the showBrowse prop 1`] = `
<section
  className="bg-neutral05">
  <div
    className="container">
    <nav
      className="button-nav">
      <a
        className="button-icon-primary"
        onClick={[Function]}
        style={Object {}}>
        <span>
          <i
            className="manicon manicon-books-with-glasses" />
          Projects You\'re Following
        </span>
      </a>
    </nav>
  </div>
</section>
`;

exports[`ButtonNavigation component respects the showFollowing prop 1`] = `
<section
  className="bg-neutral05">
  <div
    className="container">
    <nav
      className="button-nav">
      <a
        className="button-icon-primary"
        onClick={[Function]}
        style={Object {}}>
        <span>
          <i
            className="manicon manicon-books-on-shelf" />
          See more projects
        </span>
      </a>
    </nav>
  </div>
</section>
`;
